# pi-dj-mix-recorder

./: .gitignore  build_on_pi.sh  setup.sh
DJSR/: main.c
DJSR/APlay/: APlay.c  APlay.h  formats.h  gettext.h  readme.txt
DJSR/AudioPlayer/: AudioPlayer.c  AudioPlayer.h
DJSR/app/: app.c  app.h
DJSR/nbproject/: Makefile-Copy_of_Debug.mk  Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
DJSR/nbproject/private/: private.xml
app/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dj-mix-recorder  djsr_clion.cbp
app/APlay/: APlay.h  aconfig.h
app/PORTAUDIO-prefix/src/PORTAUDIO-stamp/: PORTAUDIO-gitinfo.txt
app/app/: app.c  app.h
app/colors/: Eclipse Moonrise UI.xml  Electric Expresso 2.xml  Englithened.xml  Flower Garden.xml  GitHub 2017.xml  Hero - Dark 80's.xml  Marijns magical theme.xml  Modbat.xml  Monokai_x.xml  Nette Theme.xml  OneGreen_V2.xml  Picasso v2.0.xml  Solarized dark alternative.xml  TSNO Dev Editor Theme 2017.2.xml  Tobysign.xml  ViM Dark Blue.xml  Winter Light.xml  wicksome.xml
app/layouts/: test1.glade~
app/pa/: PaPlay.c  PaPlay.h  portaudio.h
dj_mix_recorder_clion/: CMakeLists.txt  main.c  shared_data.h
dj_mix_recorder_clion/APlay/: APlay.c  APlay.h
dj_mix_recorder_clion/app/: app.c
dj_mix_recorder_clion/colors/: CandyPaper.xml  Gentooish III.xml  Improved Darcula.xml  IntellIjToEclipse.xml  Meela %7C Dark Theme for IDEA and Android Studio.xml  OneGreen.xml  Order Test.xml  Solarized dark by vpavkin.xml  Spring Garden.xml  Sunset.xml  TSNO Dev Editor Theme 2017.1.xml  TSNO Dev Editor Theme 2017.3 .xml  Vivid.xml  Zenite.xml  Ziggy Stardust.xml  saf.xml  vscode dark fix.xml  vscode dark.xml  wicksome 0.1.xml
dj_mix_recorder_nb/nbproject/: Makefile-Debug.mk  Makefile-variables.mk  Package-Copy_of_Debug.bash  configurations.xml  project.properties
dj_mix_recorder_nb/nbproject/private/: configurations.xml  private.xml
